# Intel-Internship-Final-Project-python

./: DEPLOYMENT_GUIDE.md  Pipfile  README.md  app.py  app_minimal.py  deploy.py  model_loader.py  model_loader_onnx.py  opencv_demo.py  problem-statment.txt  project_documentation.txt  pyproject.toml  references.txt  requirements.txt  requirements_alternative.txt  requirements_cloud.txt  requirements_flexible.txt  requirements_flexible_cloud.txt  requirements_latest.txt  requirements_local.txt  requirements_minimal.txt  requirements_onnx.txt  requirements_prerelease.txt  requirements_python311.txt  requirements_very_flexible.txt  setup.py  switch_env.py  test_model.py
.streamlit/: config.toml
model.savedmodel/variables/: variables.data-00000-of-00001  variables.index
