[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helmet-detection-system"
version = "1.0.0"
description = "AI-powered helmet detection system"
authors = [{name = "Your Name"}]
requires-python = ">=3.8,<3.13"
dependencies = [
    "streamlit==1.28.1",
    "tensorflow==2.15.0",
    "opencv-python==4.8.1.78",
    "pillow==10.0.1",
    "numpy==1.24.3",
    "matplotlib==3.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"] 